[gd_scene load_steps=2 format=3 uid="uid://du1rog8ejcj0m"]

[ext_resource type="Script" path="res://utility/hurt_box.gd" id="1_dr1n6"]

[node name="hurt_box" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_dr1n6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="disable_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="disable_timer" to="." method="_on_disable_timer_timeout"]
